users interface & api (#9)
* users interface & api

* api spec updated
